Revise README with project details and optimizations
Updated project title and expanded project overview with detailed descriptions of algorithms, technologies, and performance metrics.